--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;700&display=swap");
+
+body {
+  background: #181c20;
+  color: #b5e3ff;
+  font-family: "Fira Mono", "Hack", "Menlo", "Consolas", "Liberation Mono",
+    "Courier New", monospace;
+  letter-spacing: 0.02em;
+  margin: 0;
+  padding: 0;
+}
